--- a/header.css
+++ b/header.css
@@ -6,13 +6,14 @@ body {
     font-family: Arial, sans-serif;
     box-sizing: border-box;
     background-color: #f4f4f4;
+    background-size: cover;
+    background-image: url(background.jpg);
+
 }
 
 header {
     background-color: #4285F4;
     padding: 15px 0;
-    position: sticky;
-    top: 0;
     width: 100%;
     z-index: 1;
 }
@@ -37,6 +38,9 @@ header {
     text-align: justify;
 
 }
+.image{
+    border-radius: 50px;
+}
 
 .nav-menu {
     display: flex;
@@ -56,6 +60,9 @@ header {
 
 .nav-menu a:hover {
     color: #ffcc00;
+    text-decoration: underline;
+    text-decoration-color: #ffcc00;
+    text-decoration-thickness: 1px;
 }
 
 .main {
@@ -65,6 +72,9 @@ header {
 
 #section img {
     border-radius: 10px;
+}
+.main{
+    gap: 12px;
 }
 
 h1 {
@@ -76,6 +86,12 @@ h1 {
     font-size: 35px;
     color: black;
 }
+.hi{
+    padding: 15px;
+}
+
+
+
 
 .abouT {
     max-width: 800px;
@@ -118,6 +134,38 @@ ul {
     justify-content: space-around;
     flex-wrap: wrap;
 }
+.card {
+    justify-content: center;
+    background: white;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    text-align: center;
+    padding: 8px 50px;
+    margin-inline: 379px;
+    
+}
+.card img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+.card h2 {
+    margin: 15px 0;
+}
+.card p {
+    color: gray;
+}
+
+.btn {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 15px;
+    background: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    }
 
 .column {
     margin: 10px;
@@ -128,9 +176,6 @@ ul {
     padding-bottom: 5px;
 }
 
-.column ul {
-    padding: 0;
-}
 
 .column ul li {
     list-style: none;
